--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="stylesheet" href="https://spoqa.github.io/spoqa-han-sans/css/SpoqaHanSansNeo.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>프리윌린 채용 과제 - 윤성희</title>
   </head>
